mmedu/fw/atlonic/.metadata/.plugins/org.eclipse.cdt.ui/projekt1.build.log
08:37:09 **** Rebuild of configuration Debug for project projekt1 ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_crc.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_crc.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_dbgmcu.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_dbgmcu.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_spi.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_spi.o 
arm-atollic-eabi-gcc -c ..\src\encoder.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o src\encoder.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_dac.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_dac.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_rcc.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_rcc.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_can.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_can.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_tim.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_tim.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_opamp.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_opamp.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_dma.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_dma.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_iwdg.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_iwdg.o 
arm-atollic-eabi-gcc -c ..\src\rcc.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o src\rcc.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_pwr.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_pwr.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_syscfg.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_syscfg.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_hrtim.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_hrtim.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_comp.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_comp.o 
arm-atollic-eabi-gcc -c ..\StdPeriph_Driver\src\stm32f30x_exti.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o StdPeriph_Driver\src\stm32f30x_exti.o 
arm-atollic-eabi-gcc -c ..\src\runtime.c -mthumb -mcpu=cortex-m4 -std=gnu11 -DSTM32F30 -DSTM32F3 -DSTM32F303RDTx -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F303xE -ID:/stm32/stm32f303/projekt1/inc -ID:/stm32/stm32f303/projekt1/CMSIS/core -ID:/stm32/stm32f303/projekt1/CMSIS/device -ID:/stm32/stm32f303/projekt1/StdPeriph_Driver/inc -O0 -ffunction-sections -g3 -fstack-usage -Wall -specs=nano.specs -o src\runtime.o 
..\src\runtime.c: In function 'RUNTIME_Config':
..\src\runtime.c:16:25: error: expected identifier or '(' before '.' token
  TIM_TimeBaseInitTypeDef.TIM_TimeBaseStructure;
                         ^

08:38:03 Build Finished (took 54s.156ms)

